--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Edition Template
-url: "https://long-pig.cloudvent.net"
+title: slaarks
+url: "https://slaarks.github.io/"
 baseurl:
 google_analytics_key:
 show_full_navigation: true
@@ -15,9 +15,9 @@ author:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Edition Template
+  name: slaarks
   links:
-    - https://github.com/CloudCannon/edition-jekyll-template
+    - https://slaarks.github.io/
 
 # -----
 # Build
